Fix text overflow problem for cell numbers

--- a/packages/compass-crud/styles/ag-grid.less
+++ b/packages/compass-crud/styles/ag-grid.less
@@ -60,7 +60,9 @@
     	outline: 0;
 
     	&-last-left-pinned{
-			padding: 6px 7px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
     		color: #A2A0A0;
     		border-left: 0.5px solid #E0E0E0;
     	}
